# OromoScript

./: .gitignore  Makefile  README.md
OroScript/: .gitignore  CMakeLists.txt  LICENSE
OroScript/docs/: README.md
OroScript/examples/: hello.oro
OroScript/include/ast/: Node.cpp  Node.h
OroScript/include/evaluator/: Evaluator.h
OroScript/include/lexer/: Lexer.h
OroScript/include/parser/: Parser.h
OroScript/include/semantic/: SemanticAnalyzer.h
OroScript/include/utils/: Errors.h  SymbolTable.h
OroScript/src/: main.cpp
OroScript/src/evaluator/: Evaluator.cpp
OroScript/src/lexer/: Lexer.cpp
OroScript/src/parser/: Parser.cpp
OroScript/tests/: CMakeLists.txt
include/: Lexer.hpp  Token.hpp
src/: Lexer.cpp  Token.cpp  main.cpp
